fixed title on mobile

--- a/site/style.css
+++ b/site/style.css
@@ -14,12 +14,9 @@ h3{
   font-size: 200%;
 }
 #title{
-  width:100%;
-  height: 10%;
   background-color: #66BB6A;
   color: white;
   text-align: center;
-  vertical-align: middle;
   margin-top: 0px;
 }
 #downloadBar{
